# Allura_Memory

./: .dockerignore  .env.example  .gitignore  .opencode-prompt.md  .prettierignore  .sops.yaml  1  AGENTS.md  AGENTS.override.md  AI-GUIDELINES.md  BRIEF-backup-automation.md  BRIEF-retrieval-gateway.md  CLAUDE.md  DESIGN.md  DOCKER.md  Dockerfile  Dockerfile.enterprise  Dockerfile.mcp  Dockerfile.mcp-server  Dockerfile.researcher  EMBEDDING_SETUP.md  INSTALLATION-REPORT.md  LICENSE  OPENCODE_RESET_LOG.md  OPERATIONS.md  OWNERS.yaml  PRODUCT.md  RAM-NEEDS-FROM-DURHAM.md  README.md  SECURITY-INCIDENT-2026-04-06.md  STORY-2-1-PATCH-REPORT.md  TOKEN_MIGRATION_REPORT.md  UNIVERSAL_MCP_RULE.md  UX-REAUDIT-REPORT.md  UX-REMEDIATION-PRD.md  UX-TEST-REPORT.md  bench.sh  blocking_list.md  brand-audit-results.json  bunfig.toml  (+35 more)
.claude/: AGENTS.md  AI-GUIDELINES.md  MODEL_REGISTRY.md  README.md  SKILL-OWNERSHIP.md  manifest.json  mcp.json  opencode.jsonc  ralph-loop.local.md  settings.json  settings.local.json
.githooks/: pre-commit
.github/: API-REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  copilot-instructions.md
.impeccable/: design.json
.opencode/: .gitignore  AGENTS.md  AGENT_MODEL_AUDIT.md  AUTONOMOUS_CONFIG.md  COWORK.md  CURRENT_AGENT_CONFIG.md  DEVELOPMENT-READINESS.md  HARNESS-INDEX.md  (+27 more)
.opencode.bak/: oh-my-opencode.json
crates/ruvix-sidecar/: Cargo.toml
crates/ruvix-sidecar/benches/: ipc_latency.rs
crates/ruvix-sidecar/src/: capability.rs  checkpoint.rs  graph_store.rs  ipc.rs  main.rs  proof_engine.rs  protocol.rs  ring_buffer.rs  vector_store.rs
(+2215 files in other folders)
