[package]
name = "ruvix-sidecar"
version = "0.1.0"
edition = "2021"
authors = ["Memory Project <ronin704>"]
description = "RuVix Cognition Kernel sidecar for Memory project"
license = "MIT OR Apache-2.0"
rust-version = "1.77"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "rt-multi-thread"] }

# IPC - shared memory ring buffer
shared_memory = "0.12"
raw_sync = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptographic proofs
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.1"
rand = "0.8"

# HTTP API
axum = "0.7"
tower = "0.5"
hyper = { version = "1.5", features = ["full"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# RuVix kernel (when published - using local path for now)
# ruvix-nucleus = { git = "https://github.com/ruvnet/RuVector", path = "crates/ruvix/crates/nucleus" }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "ipc_latency"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
